# hdf5xmp

./: .directory  .gitignore  LICENSE  README  README.md
common/: thumbnailerCore.cpp  thumbnailerCore.h
cpp/: CMakeLists.txt  CMakeLists.txt~  hdf5thumbnail.cpp  hdf5thumbnail.desktop  hdf5thumbnail.h
cpp/gnome/: hdf5.thumbnailer  hdf5thumbnail.cpp
cpp/kde/: hdf5thumbnail.cpp
cppbuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ecm_uninstall.cmake  hdf5thumbnailer.cbp  hdf5thumbnailer.layout  moc_hdf5thumbnail.cpp
doc/: documentation.tex  titlepage.tex
doc/parts/: components.tex  install.tex  introduction.tex  userblockstorage.tex
examples/: PLV_160502001.hdf5  PLV_160502001.xmp  PLV_160503005.hdf5  PLV_160524001.hdf5  PLV_XMP_160502001.hdf5
hdf5Files/: .directory  PLV_160502001.hdf5  PLV_160502001.hdf5.bak  Sample_Image_2016-08-19_065 - asdsda.hdf5  Sample_Image_2016-08-19_065.hdf5  test.hdf5
hdf5Files/test/: .directory  PLV_160502001.hdf5
hdf_python/: metadataReader.py  template.xmp  thumbnailInserter.py
hdf_python/tests/: hdf_tests.py  thumb.hdf5  thumbXMP.xmp
linux/: CMakeLists.txt  thumbnailerCore.cpp  thumbnailerCore.h
linux/cpp/: CMakeLists.txt
linux/cpp/gnome/: hdf5thumbnail.cpp
linux/cpp/kde/: README.md  hdf5thumbnail.cpp  hdf5thumbnail.h
linux/gnome/: README.md  hdf5thumbnail.cpp
linux/kde/: hdf5thumbnail.cpp  hdf5thumbnail.h
linux/tests/: CMakeLists.txt  test1.hdf5  test2.hdf5  test3.hdf5  testFile  test_thumbnailer.cpp
osx/HDF5 Thumbnailer/HDF5 Thumbnailer/: GeneratePreviewForURL.c  GenerateThumbnailForURL.c  Info.plist  hdf5OSXImpl.cpp  hdf5OSXImpl.hpp  main.c
osx/HDF5 Thumbnailer/HDF5 Thumbnailer.xcodeproj/: project.pbxproj
osx/HDF5 Thumbnailer/HDF5 Thumbnailer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
python/: h5viewer.py~  metadataReader.py  template.xmp  thumbnailExtractor.py  thumbnailInserter.py
test/: CMakeLists.txt  test.cpp
windows/: CppShellExtThumbnailHandler.sln  README.md
windows/CppShellExtThumbnailHandler/: CppShellExtThumbnailHandler.vcxproj  CppShellExtThumbnailHandler.vcxproj.filters  HDF5ThumbnailProvider.cpp  HDF5ThumbnailProvider.h
windows/Setup1/: Setup1.vdproj
windows/cpp/: CppShellExtThumbnailHandler.sln
windows/cpp/CppShellExtThumbnailHandler/: ClassFactory.cpp  CppShellExtThumbnailHandler.vcxproj  CppShellExtThumbnailHandler.vcxproj.filters  HDF5ThumbnailProvider.cpp  HDF5ThumbnailProvider.h  Reg.cpp  Reg.h  dllmain.cpp
windows/cpp/CppShellExtThumbnailHandler/Release/CppShell.145AB33E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CppShellExtThumbnailHandler.lastbuildstate  CppShellExtThumbnailHandler.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
windows/cpp/Release/: CppShellExtThumbnailHandler.exp  CppShellExtThumbnailHandler.iobj  CppShellExtThumbnailHandler.ipdb  CppShellExtThumbnailHandler.lib
windows/cpp/Setup1/: Setup1.vdproj
